--- a/spring-boot-hello/pom.xml
+++ b/spring-boot-hello/pom.xml
@@ -35,9 +35,20 @@
         <exclusions>
 	      <exclusion>
 	         <groupId>org.springframework.boot</groupId>
-	         <artifactId>spring-boot-starter-logging</artifactId>
+	         <artifactId>spring-boot-starter-log4j2</artifactId>
 	      </exclusion>
         </exclusions>
+         <!--  使用下面这个和上面排除spring-boot-starter-logging是一样的效果
+	  <exclusions>
+	     <exclusion>
+	        <artifactId>logback-classic</artifactId>
+	        <groupId>ch.qos.logback</groupId>
+	     </exclusion>
+	     <exclusion>
+	        <artifactId>log4j-over-slf4j</artifactId>
+	        <groupId>org.slf4j</groupId>
+	     </exclusion>
+	  </exclusions>-->
      </dependency>
    <dependency>
 	   <groupId>com.google.code.gson</groupId>
@@ -89,26 +100,24 @@
 	    <version>1.1.9</version>
    </dependency>
 
-<!-- =============================数据库相关============================== -->
 <!-- =============================日志相关=============================== -->
 	<!-- log4j日志 -->
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 	<dependency>
-	    <groupId>commons-logging</groupId>
-	    <artifactId>commons-logging</artifactId>
-	    <version>1.2</version>
-    </dependency>
-<!-- =============================日志相关=============================== -->
-    <!-- 添加Spring-data-jpa依赖.
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency> -->
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.11.0</version>
+	</dependency>
+<!-- =============================前端显示模板=============================== -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
+	
     <!-- spring boot tomcat jsp 支持开启 -->  
      <dependency>  
             <groupId>org.apache.tomcat.embed</groupId>  
             <artifactId>tomcat-embed-jasper</artifactId>  
-      
-      
       </dependency>  
         <!-- servlet支持开启 -->  
       <dependency>  
@@ -120,12 +129,13 @@
             <groupId>javax.servlet</groupId>  
             <artifactId>jstl</artifactId>  
       </dependency> 
+<!-- =============================测试=============================== -->
       <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>3.8.1</version>
+	      <scope>test</scope>
+      </dependency>
   </dependencies>
       <!-- 构建节点. -->
     <build>
