--- a/spring-boot-hello/src/main/java/log4j.properties
+++ b/spring-boot-hello/src/main/java/log4j.properties
@@ -12,3 +12,13 @@ log4j.appender.logfile=org.apache.log4j.FileAppender
 log4j.appender.logfile.File=target/spring.log
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
+
+log4j.appender.druid= org.apache.log4j.DailyRollingFileAppender 
+log4j.appender.druid.layout= org.apache.log4j.PatternLayout 
+log4j.appender.druid.layout.ConversionPattern= [druid] %d [%-15.15t] %-5p %-30.30c {1} - %m%n   
+log4j.appender.druid.file= ../logs/my_druid_
+log4j.appender.druid.DatePattern= yyyy-MM-dd'.log'
+log4j.appender.druid.append= true 
+log4j.appender.druid.ImmediateFlush= true
+
+log4j.logger.com.mycompany.druid= info,druid
