--- a/spring-boot-hello/src/main/resources/application.properties
+++ b/spring-boot-hello/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 #mybatis
 mybatis.typeAliasesPackage=com.crm.springboot.pojos
-mybatis.mapper-locations=classpath:com/crm/springboot/mapper/*.xml 
+mybatis.mapper-locations=classpath\:com/crm/springboot/mapper/*.xml 
 #http encoding  
 
 
