整合了redis缓存

--- a/spring-boot-hello/src/main/resources/application.properties
+++ b/spring-boot-hello/src/main/resources/application.properties
@@ -2,9 +2,34 @@ spring.profiles.active=dev
 #mybatis
 mybatis.typeAliasesPackage=com.crm.springboot.pojos
 mybatis.mapper-locations=classpath\:com/crm/springboot/mapper/*.xml 
-#http encoding  
 
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.initial-size=5  
+spring.datasource.druid.min-idle=5  
+spring.datasource.druid.max-active=20  
+spring.datasource.druid.max-wait=60000  
+spring.datasource.druid.time-between-eviction-runs-millis=60000  
+spring.datasource.druid.min-evictable-idle-time-millis=300000  
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL  
+spring.datasource.druid.test-while-idle=true  
+spring.datasource.druid.test-on-borrow=false  
+spring.datasource.druid.test-on-return=false  
+spring.datasource.druid.pool-prepared-statements=true  
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20  
+spring.datasource.druid.filters=stat,wall,log4j   
 
- 
-spring.mvc.view.prefix=/WEB-INF/jsp/  
-spring.mvc.view.suffix=.jsp 
+#redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.min-idle=0
+spring.redis.timeout=5000
+
+spring.cache.type=redis
+
+# print log,lookup sql
+logging.level.com.crm.springboot.mapper=DEBUG
