--- a/spring-boot-hello/pom.xml
+++ b/spring-boot-hello/pom.xml
@@ -99,7 +99,16 @@
 	    <artifactId>druid</artifactId>
 	    <version>1.1.9</version>
    </dependency>
-
+<!-- =============================数据缓存=============================== -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-cache</artifactId>
+	</dependency>
+    <!-- redis -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-data-redis</artifactId>
+	</dependency>
 <!-- =============================日志相关=============================== -->
 	<!-- log4j日志 -->
 	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
