--- a/spring-boot-crm/src/main/resources/application.properties
+++ b/spring-boot-crm/src/main/resources/application.properties
@@ -4,6 +4,7 @@ mybatis.typeAliasesPackage=com.crm.springboot.pojos
 mybatis.mapper-locations=classpath\:com/crm/springboot/mapper/*.xml 
 
 spring.mvc.static-path-pattern=/**
+spring.jpa.show-sql = true
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.initial-size=5  
@@ -35,3 +36,8 @@ spring.cache.type=redis
 
 # print log,lookup sql
 logging.level.com.crm.springboot.mapper=DEBUG
+
+#activiti
+#auto deploy [location:classpath:processes/
+spring.activiti.check-process-definitions=true
+spring.activiti.async-executor-activate=true
