--- a/spring-boot-crm/src/main/resources/application.properties
+++ b/spring-boot-crm/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.profiles.active=dev
 #mybatis
 mybatis.typeAliasesPackage=com.crm.springboot.pojos
 mybatis.mapper-locations=classpath\:com/crm/springboot/mapper/*.xml 
-
 spring.mvc.static-path-pattern=/**
 spring.jpa.show-sql = true
-
+#pageHelper
+#pagehelper.dialect=com.github.pagehelper.dialect.helper.MySqlDialect  
+#datasource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.initial-size=5  
 spring.datasource.druid.min-idle=5  
