--- a/spring-boot-crm/pom.xml
+++ b/spring-boot-crm/pom.xml
@@ -99,6 +99,14 @@
 	    <artifactId>druid</artifactId>
 	    <version>1.1.9</version>
    </dependency>
+<!-- =============================分页插件=============================== -->
+   <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
+	<dependency>
+	    <groupId>com.github.pagehelper</groupId>
+	    <artifactId>pagehelper-spring-boot-starter</artifactId>
+	    <version>1.2.4</version>
+	</dependency>
+   
 <!-- =============================数据缓存=============================== -->
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
