--- a/spring-boot-crm/pom.xml
+++ b/spring-boot-crm/pom.xml
@@ -21,10 +21,10 @@
     
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- 指定一下jdk的版本 ，这里我们使用jdk 1.8 ,默认是1.6 -->
+    <!-- 指定一下jdk的版本 ，这里我们使用jdk 1.8 ,默认是1.6 
      <maven.compiler.source>1.8</maven.compiler.source>  
      <maven.compiler.target>1.8</maven.compiler.target>  
-     <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion> 
+     <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion> -->
   </properties>
 
   <dependencies>
@@ -181,6 +181,19 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
+			<plugin>
+			
+			   <artifactId>maven-compiler-plugin</artifactId>
+			
+			   <configuration>
+			
+			      <source>1.7</source>
+			
+			      <target>1.7</target>
+			
+			   </configuration>
+			
+			</plugin>
         </plugins>
         
     </build> 
