--- a/spring-boot-crm/src/main/resources/application.properties
+++ b/spring-boot-crm/src/main/resources/application.properties
@@ -39,5 +39,15 @@ spring.cache.type=redis
 logging.level.com.crm.springboot.mapper=DEBUG
 
 #activiti
+spring.activiti.mail-server-default-from=181457121@qq.com
+spring.activiti.mail-server-host=smtp.qq.com
+spring.activiti.mail-server-password=pyrafzkwaoblbija
+spring.activiti.mail-server-port=465
+spring.activiti.mail-server-use-ssl=true 
+spring.activiti.mail-server-auth=true
+spring.activiti.mail-server-starttls-enable=true
+#spring.activiti.mail-server-use-tls= 
+spring.activiti.mail-server-user-name=181457121@qq.com
 #auto deploy [location:classpath:processes/
 spring.activiti.check-process-definitions=true
+
