--- a/spring-boot-crm/pom.xml
+++ b/spring-boot-crm/pom.xml
@@ -153,6 +153,14 @@
             <groupId>javax.servlet</groupId>  
             <artifactId>jstl</artifactId>  
       </dependency> 
+ <!-- =============================读取microsoft文件=============================== -->
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.17</version>
+	</dependency>
+
 <!-- =============================测试=============================== -->
       <dependency>
 	      <groupId>junit</groupId>
