--- a/spring-boot-crm/src/main/resources/application.properties
+++ b/spring-boot-crm/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.profiles.active=dev
+#utf-8
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+
 #mybatis
 mybatis.typeAliasesPackage=com.crm.springboot.pojos
 mybatis.mapper-locations=classpath\:com/crm/springboot/mapper/*.xml 
@@ -50,4 +56,5 @@ spring.activiti.mail-server-starttls-enable=true
 spring.activiti.mail-server-user-name=181457121@qq.com
 #auto deploy [location:classpath:processes/
 spring.activiti.check-process-definitions=true
-
+spring.activiti.job-executor-activate=true
+spring.activiti.async-executor-activate=true
