--- a/spring-boot-crm/src/main/resources/application-dev.properties
+++ b/spring-boot-crm/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=8080
 ###datasource
 ########################################################
 
-spring.datasource.url = jdbc:mysql://localhost:3306/hrm?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://129.0.73.62:3306/hrm?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
